# protected-auction-key-value-service

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .gitignore  .hadolint.yaml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .versionrc.json  BUILD  BUILD.bazel  CHANGELOG.md  CPPLINT.cfg  README.md  WORKSPACE  buf.yaml  docker-buildx-presubmit-1AIM.sha  package.json
bazel/: BUILD  (+2 more)
components/aws/: BUILD  BUILD.bazel  push_sqs  sqs_cleanup.py  sqs_cleanup_manager.py  sqs_cleanup_manager_test.py
components/cloud_config/: BUILD  BUILD.bazel  aws_environment_client.cc  aws_instance_client.cc  aws_parameter_client.cc  environment_client.h  instance_client.h  instance_client_aws.cc  instance_client_gcp.cc  instance_client_local.cc  local_environment_client.cc  local_instance_client.cc  parameter_client.h  parameter_client_aws.cc  parameter_client_aws_test.cc  parameter_client_gcp.cc  parameter_client_gcp_test.cc  parameter_client_local.cc  parameter_client_local_test.cc
components/container/: BUILD.bazel  thread_safe_hash_map.h  thread_safe_hash_map_test.cc
components/errors/: BUILD  BUILD.bazel  aws_error_util.h  error_tag.h  error_util_aws.cc  error_util_aws.h  error_util_aws_test.cc  error_util_gcp.cc  error_util_gcp.h  error_util_gcp_test.cc  mocks.h  retry.cc  retry.h  retry_test.cc
components/internal_server/: BUILD  BUILD.bazel  cache_lookup_client.cc  cache_lookup_client.h  cache_lookup_client_test.cc  constants.h  local_lookup.cc  local_lookup.h  local_lookup_test.cc  lookup.h  lookup.proto  lookup_client.h  lookup_client_impl.cc  lookup_server_impl.cc  lookup_server_impl.h  lookup_server_impl_test.cc  lookup_supplier.cc  lookup_supplier.h  mocks.h  remote_lookup_client.h  remote_lookup_client_impl.cc  remote_lookup_client_impl_test.cc  run_query_client.h  run_query_client_impl.cc  sharded_lookup.cc  sharded_lookup.h  sharded_lookup_server_impl.cc  sharded_lookup_server_impl.h  sharded_lookup_server_impl_test.cc  sharded_lookup_test.cc  string_padder.cc  string_padder.h  string_padder_test.cc
components/query/: BUILD.bazel  ast.cc  ast.h  ast_test.cc  driver.cc  driver.h  driver_test.cc  parser.yy  scanner.h  scanner.ll  scanner_test.cc  sets.cc  sets.h  sets_test.cc  template_test_utils.h
components/sharding/: BUILD  BUILD.bazel  cluster_mappings_manager.cc  cluster_mappings_manager.h  cluster_mappings_manager_aws.cc  cluster_mappings_manager_aws_test.cc  cluster_mappings_manager_gcp.cc  cluster_mappings_manager_gcp_test.cc  cluster_mappings_manager_test.cc  mocks.h  shard_manager.cc  shard_manager.h  shard_manager_test.cc
components/telemetry/: BUILD  BUILD.bazel  aws_xray_id_generator.cc  aws_xray_id_generator_test.cc  error_code.h  init.h  init_aws.cc  init_local.cc  init_local_jaeger.cc  init_local_ostream.cc  init_local_otlp.cc  init_local_zipkin.cc  kv_telemetry.cc  kv_telemetry.h  metrics_recorder.cc  metrics_recorder.h  mocks.h  open_telemetry_sink.cc  open_telemetry_sink.h  server_definition.h  telemetry.cc  telemetry.h  telemetry_provider.cc  telemetry_provider.h  trace_generator_aws.cc  trace_generator_aws.h  tracing.cc  tracing.h  xray_id_generator_aws_test.cc
components/tools/: BUILD  BUILD.bazel  blob_storage_change_watcher.cc  blob_storage_change_watcher_aws.cc  blob_storage_change_watcher_local.cc  blob_storage_commands.cc  blob_storage_commands.h  blob_storage_util.cc  blob_storage_util_aws.cc  blob_storage_util_local.cc  concurrent_publishing_engine.cc  concurrent_publishing_engine.h  data_loading_analyzer.cc  delta_file_record_change_watcher.cc  delta_file_watcher.cc  delta_file_watcher_aws.cc  delta_file_watcher_local.cc  get_region.cc  get_region_aws.cc  get_region_local.cc  publisher_service.h  publisher_service_aws.cc  publisher_service_gcp.cc  publisher_service_local.cc  query_dot.cc  query_dot.h  query_toy.cc  realtime_notifier.cc  realtime_updates_publisher.cc
components/udf/: BUILD  BUILD.bazel  cache_get_values_hook.cc  cache_get_values_hook.h  cache_get_values_hook_test.cc  code_config.cc  code_config.h  code_fetcher.cc  code_fetcher.h  code_fetcher_test.cc  get_values_hook.cc  get_values_hook.h  get_values_hook_impl.cc  get_values_hook_impl.h  get_values_hook_impl_test.cc  get_values_hook_test.cc  logging_hook.h  mocks.h  noop_udf_client.cc  noop_udf_client.h  run_query_hook.cc  run_query_hook.h  run_query_hook_test.cc  udf_client.cc  udf_client.h  udf_client_test.cc  udf_config_builder.cc  udf_config_builder.h
components/util/: BUILD  BUILD.bazel  build_flags.cc  build_info.cc  build_info.h  duration.cc  duration.h  duration_test.cc  generate_version_h  periodic_closure.cc  periodic_closure.h  periodic_closure_test.cc  platform_initializer.h  platform_initializer_aws.cc  platform_initializer_gcp.cc  platform_initializer_local.cc  request_context.cc  request_context.h  safe_path_log_context.h  sleepfor.cc  sleepfor.h  sleepfor_mock.h  sleepfor_test.cc
infrastructure/testing/: BUILD.bazel  protocol_testing_helper_server.cc  protocol_testing_helper_server.proto
public/: BUILD  BUILD.bazel  api_schema.proto  base_types.proto  buf.yaml  constants.cc  constants.h  constants_test.cc
public/data_loading/: BUILD  BUILD.bazel  README.md  data_loading.fbs  data_loading_generated.h  filename_utils.cc  filename_utils.h  filename_utils_test.cc  record_utils.cc  record_utils.h  record_utils_test.cc  records_utils.cc  records_utils.h  records_utils_test.cc  riegeli_metadata.proto
public/query/: BUILD  BUILD.bazel  get_values.proto
public/sharding/: BUILD.bazel  key_sharder.cc  key_sharder.h  key_sharder_test.cc  sharding_function.cc  sharding_function.h  sharding_function_test.cc
public/test_util/: BUILD  BUILD.bazel  data_record.h  mocks.h  proto_matcher.h  (+1 more)
third_party_deps/: BUILD.bazel  avro.BUILD  avro.patch  container_deps.bzl  cpp_repositories.bzl  emscripten_deps1.bzl  emscripten_deps2.bzl  latency_benchmark_requirements.txt  libcbor.BUILD  libcbor.patch  python_deps.bzl  riegeli.patch  roaring.BUILD  rules_closure_deps.bzl  rules_closure_repositories.bzl  word2vec_requirements.txt  zstd.BUILD
(+1114 files in other folders)
