# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = [
    "//components:__subpackages__",
    "//production/packaging:__subpackages__",
    "//public:__subpackages__",
])

cc_library(
    name = "aws_error_util",
    srcs = [
        "error_util_aws.cc",
    ],
    hdrs = [
        "error_util_aws.h",
    ],
    deps = [
        "@aws_sdk_cpp//:core",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:cord",
    ],
)

cc_library(
    name = "gcp_error_util",
    srcs = [
        "error_util_gcp.cc",
    ],
    hdrs = [
        "error_util_gcp.h",
    ],
    deps = [
        "@com_github_googleapis_google_cloud_cpp//:common",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:cord",
    ],
)

cc_test(
    name = "gcp_error_util_test",
    size = "small",
    srcs = [
        "error_util_gcp_test.cc",
    ],
    deps = [
        ":gcp_error_util",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "error_util_aws_test",
    size = "small",
    srcs = [
        "error_util_aws_test.cc",
    ],
    deps = [
        ":aws_error_util",
        "@aws_sdk_cpp//:core",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "retry",
    srcs = [
        "retry.cc",
    ],
    hdrs = [
        "retry.h",
    ],
    deps = [
        "//components/telemetry:server_definition",
        "//components/util:sleepfor",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
        "@google_privacysandbox_servers_common//src/logger:request_context_logger",
        "@google_privacysandbox_servers_common//src/telemetry:tracing",
    ],
)

cc_test(
    name = "retry_test",
    size = "small",
    srcs = [
        "retry_test.cc",
    ],
    deps = [
        ":retry",
        "//components/util:sleepfor_mock",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "error_tag",
    srcs = [
        "error_tag.h",
    ],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:cord",
    ],
)
